fix: filter list vertical alignment

--- a/src/assets/styles/components/_filter-sort.scss
+++ b/src/assets/styles/components/_filter-sort.scss
@@ -128,7 +128,7 @@
 	}
 
 	.accordion__content > .input-group > li {
-		padding: rem(14) 0;
+		padding: rem(15) 0 rem(13);
 		position: relative;
 	}
 
